--- a/equinix/config-create.yaml
+++ b/equinix/config-create.yaml
@@ -10,6 +10,6 @@ install:
   mode: create
   mgmt_interface: eth0
   device: /dev/sda
-  iso_url: https://github.com/futuretea/harvester-autobuild/releases/download/2021.03.09-1713-dc38385/harvester-amd64.iso
+  iso_url: http://18.163.129.6/upgrade-1.20.2.iso
   tty: ttyS1,115200n8
 
