--- a/equinix/config-create.yaml
+++ b/equinix/config-create.yaml
@@ -10,6 +10,6 @@ install:
   mode: create
   mgmt_interface: eth0
   device: /dev/sda
-  iso_url: http://18.163.8.167/upgrade-1.20.2.iso
+  iso_url: https://releases.rancher.com/harvester/master/harvester-amd64.iso
   tty: ttyS1,115200n8
 
